--- a/homework/2-GAN/hw2-GAN.ipynb
+++ b/homework/2-GAN/hw2-GAN.ipynb
@@ -15,6 +15,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_size=(128, 128)\n",
     "transforms = torchvision.transforms.Compose([\n",
-    "    torchvision.transforms.Resize((256, 256)),\n",
+    "    torchvision.transforms.Resize(image_size),\n",
     "    torchvision.transforms.ToTensor(),\n",
     "    torchvision.transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])\n",
     "])"
@@ -77,29 +87,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files already downloaded and verified\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "celeba = torchvision.datasets.CelebA('celeba', target_type='attr', transform=transforms, download=True)\n",
-    "celeba_dataloader = torch.utils.data.DataLoader(celeba, 1, shuffle=True)"
+    "celeba = torchvision.datasets.CelebA('/data/annispiridonov/CelebA/celeba', target_type='attr', transform=transforms, download=False)\n",
+    "celeba_dataloader = torch.utils.data.DataLoader(celeba, 3, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "index2attr = {i:j for i, j in enumerate(celeba.attr_names)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning import Trainer\n",
+    "from pytorch_lightning.loggers import WandbLogger\n",
+    "import model as model_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'model' from '/home/annispiridonov/GAN/homework/2-GAN/model.py'>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(model_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = next(iter(celeba_dataloader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True, used: False\n",
+      "TPU available: None, using: 0 TPU cores\n",
+      "/data/annispiridonov/gan_venv/lib/python3.6/site-packages/pytorch_lightning/utilities/distributed.py:50: UserWarning: GPU available but not used. Set the --gpus flag when calling the script.\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainer = Trainer(logger=WandbLogger(project='GAN-homework_2-GAN', save_dir='/data/annispiridonov/wandb'), log_every_n_steps=1, gpus=0)\n",
+    "model = model_.VanillaStarGAN(x, y, index2attr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/annispiridonov/gan_venv/lib/python3.6/site-packages/pytorch_lightning/utilities/distributed.py:50: UserWarning: you passed in a val_dataloader but have no validation_step. Skipping validation loop\n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001B[34m\u001B[1mwandb\u001B[0m: Currently logged in as: \u001B[33mpenchekrak\u001B[0m (use `wandb login --relogin` to force relogin)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Tracking run with wandb version 0.10.22<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">spring-cloud-10</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/penchekrak/GAN-homework_2-GAN\" target=\"_blank\">https://wandb.ai/penchekrak/GAN-homework_2-GAN</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/penchekrak/GAN-homework_2-GAN/runs/3phl0rxa\" target=\"_blank\">https://wandb.ai/penchekrak/GAN-homework_2-GAN/runs/3phl0rxa</a><br/>\n",
+       "                Run data is saved locally in <code>/data/annispiridonov/wandb/run-20210313_130401-3phl0rxa</code><br/><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  | Name          | Type          | Params\n",
+      "------------------------------------------------\n",
+      "0 | discriminator | Discriminator | 45.0 M\n",
+      "1 | generator     | Generator     | 8.5 M \n",
+      "------------------------------------------------\n",
+      "53.6 M    Trainable params\n",
+      "0         Non-trainable params\n",
+      "53.6 M    Total params\n",
+      "214.356   Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   0%|          | 0/54257 [00:00<?, ?it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/annispiridonov/gan_venv/lib/python3.6/site-packages/pytorch_lightning/utilities/distributed.py:50: UserWarning: The dataloader, train dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 72 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   0%|          | 2/54257 [00:49<369:58:16, 24.55s/it, loss=7.35, v_num=0rxa]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/annispiridonov/gan_venv/lib/python3.6/site-packages/pytorch_lightning/utilities/distributed.py:50: UserWarning: training_step returned None if it was on purpose, ignore this warning...\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   1%|          | 355/54257 [23:53<60:27:41,  4.04s/it, loss=2.5, v_num=0rxa] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/annispiridonov/gan_venv/lib/python3.6/site-packages/pytorch_lightning/utilities/distributed.py:50: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   1%|          | 355/54257 [24:18<61:31:55,  4.11s/it, loss=2.5, v_num=0rxa]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.fit(model, celeba_dataloader, celeba_dataloader)"
    ]
   },
   {
@@ -266,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
